tests/integration/targets/playbooks/provision_playbook/example.com/platform/opa-gatekeeper/policies/host-network-ports/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds: 
          - Pod
    excludedNamespaces:
      - kube-system
      - elastic-system
      - jaeger
  parameters:
    hostNetwork: false
    min: 0
    max: 0
